--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Docker practice</title>
 </head>
-<body>
-    <h1>Welcome to the Docker </h1>
+<body style="background-color: aquamarine;">
+    <h1 style="text-align: center;">Hands-on Docker </h1>
+    <h2 style="text-align: center;"> ATIQ MANSOORI</h2>
+    <div class="image" style="display: flex; justify-content: center;">
+        <img src="/static/asm.png" height="700" width="700" alt="Atiq Mansoori">
+    </div>
 </body>
 </html>
